Basic nav menu btn

--- a/src/components/astro/FooterLink.astro
+++ b/src/components/astro/FooterLink.astro
@@ -10,7 +10,7 @@
 
 {isBlank ? 
     <li>
-    	<a href={URL} target="_blank" rel="noopener noreferrer" class="hover:underline decoration-burgundy-800 tracking-tighter underline-offset-2">{text}</a>
+    	<a href={`https://${URL}`} target="_blank" rel="noopener noreferrer" class="hover:underline decoration-burgundy-800 tracking-tighter underline-offset-2">{text}</a>
     </li>
 :
     <a href={URL} class="hover:underline decoration-burgundy-800 tracking-tighter underline-offset-2">{text}</a>
