--- a/src/pages/clubs/index.astro
+++ b/src/pages/clubs/index.astro
@@ -1,9 +1,30 @@
 ---
+    //#region 
+        import NHD from "@assets/nhd.png";
+        import Books from "@assets/books.jpg";
+    //#endregion
+
     import Layout from '@layouts/Layout.astro';
+    import ClubCard from '@astroBlocks/ClubCard.astro';
+    import { Image } from "astro:assets";
 ---
 
 <Layout title="Clubs" bigText="Clubs">
     <main>
-        
+        <section id="grid" class="grid px-12 justify-around w-full md:grid-cols-4 md:grid-row-3 gap-y-20 h-fullscreen">
+            <ClubCard URL="/clubs/dnd" clubImg={NHD} clubName="Dnd", nextMeet="10/16/23" description="NHD is an academic competition for elementary and secondary school students. It focuses on historical research, interpretation, and creative expression. Students produce projects such as exhibits, documentaries, papers, performances, or websites related to a specific historical theme, which they present at local, state, and national competitions." />
+            <ClubCard URL="/clubs/nhd" clubImg={NHD} clubName="NHD", nextMeet="10/23/23" description="NHD is an academic competition for elementary and secondary school students. It focuses on historical research, interpretation, and creative expression. Students produce projects such as exhibits, documentaries, papers, performances, or websites related to a specific historical theme, which they present at local, state, and national competitions." />
+            <ClubCard URL="/clubs/reading-club" clubImg={NHD} clubName="Reading Club", nextMeet="11/06/23" description="NHD is an academic competition for elementary and secondary school students. It focuses on historical research, interpretation, and creative expression. Students produce projects such as exhibits, documentaries, papers, performances, or websites related to a specific historical theme, which they present at local, state, and national competitions." />
+            <ClubCard URL="/clubs/guys-read" clubImg={NHD} clubName="Guys Read", nextMeet="10/16/23" description="NHD is an academic competition for elementary and secondary school students. It focuses on historical research, interpretation, and creative expression. Students produce projects such as exhibits, documentaries, papers, performances, or websites related to a specific historical theme, which they present at local, state, and national competitions." />
+            <ClubCard URL="/clubs/writers-block" clubImg={NHD} clubName="Writers Block", nextMeet="10/16/23" description="NHD is an academic competition for elementary and secondary school students. It focuses on historical research, interpretation, and creative expression. Students produce projects such as exhibits, documentaries, papers, performances, or websites related to a specific historical theme, which they present at local, state, and national competitions." />
+            <ClubCard URL="/clubs/forensics" clubImg={NHD} clubName="Forensics", nextMeet="10/23/23" description="NHD is an academic competition for elementary and secondary school students. It focuses on historical research, interpretation, and creative expression. Students produce projects such as exhibits, documentaries, papers, performances, or websites related to a specific historical theme, which they present at local, state, and national competitions." />
+            <article class="aspect-square w-80 relative rounded-lg overflow-hidden">
+                <Image src={Books} alt="Books" class="h-full aspect-square" />
+                <div class="absolute bg-gradient-to-t from-[#0C080A]/90 from-40% to-transparent top-0 w-full h-full flex flex-col justify-end px-4 py-2">
+                    <span class="text-2xl font-mono tracking-wide">Want your club here<span class="text-burgundy-800">?</span></span>
+                    <p class="tracking-tighter text-sm indent-2">Simply scroll down to the bottom of this page and send an email to any of the people linked under "<span class="text-burgundy-800">Contacts</span>".</p>
+                </div>
+            </article>
+        </section>
     </main>
 </Layout>
