--- a/src/components/astro/ClubCard.astro
+++ b/src/components/astro/ClubCard.astro
@@ -15,7 +15,7 @@
     const {clubImg, clubName, leaderImg, leaderName, nextMeet, description, URL}: Props = Astro.props;
 ---
 
-<a href={URL} class="group aspect-square 2xl:w-80 w-60 relative rounded-lg overflow-hidden hover:scale-105 transition-transform ease-in duration-200">
+<a href={URL} class="group aspect-square w-80 relative rounded-lg overflow-hidden hover:scale-105 transition-transform ease-in duration-200">
     <Image src={clubImg} alt="Club Logo" class="h-full aspect-square" />
     <div class="absolute bg-gradient-to-t from-[#0C080A]/90 from-40% to-transparent top-0 w-full h-full flex flex-col justify-end px-4 py-2">
         <span class="text-2xl font-mono tracking-wide group-hover:text-burgundy-900 transition-colors ease-in duration-200">{clubName}</span>
