--- a/src/pages/clubs/index.astro
+++ b/src/pages/clubs/index.astro
@@ -22,7 +22,7 @@
                 <Image src={Books} alt="Books" class="h-full aspect-square" />
                 <div class="absolute bg-gradient-to-t from-[#0C080A]/90 from-40% to-transparent top-0 w-full h-full flex flex-col justify-end px-2 py-1">
                     <span class="text-2xl font-mono tracking-wide">Want your club here<span class="text-burgundy-800">?</span></span>
-                    <p class="tracking-tighter text-sm indent-2">Simply scroll down to the bottom of this page and send an email to any of the people linked under "<span class="text-burgundy-800">Contacts</span>".</p>
+                    <p class="tracking-tight text-sm indent-2">Simply scroll down to the bottom of this page and send an email to any of the people linked under "<span class="text-burgundy-800">Contacts</span>".</p>
                 </div>
             </article>
         </section>
