--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -26,8 +26,8 @@
 		<title>{title}</title>
 	</head>
 	<body>
-		<header class="px-8 py-2 flex rounded-b-md bg-[#0C080A]">
-			<div class="w-1/3 flex">
+		<header class="flex rounded-b-md bg-[#0C080A]">
+			<div class="w-1/3 flex px-8 py-2">
 				<Image src={prescottLogo} alt="Prescott Logo" class="mdTall:h-28 h-16" />
 				<div class="my-3 border border-[#E9EDDE]/25 mx-2" />
 				<TitleText text={bigText} client:load />
@@ -44,7 +44,7 @@
 		<div class="min-h-fullscreen">
 			<slot />
 		</div>
-		<footer id="bottom" class="py-2 px-6">
+		<footer id="bottom" class="pt-2 px-6 mdTall:pb-0 pb-20">
 			<div class="border-t-2 border-[#E9EDDE]/25 flex mdTall:flex-row flex-col px-2 py-2">
 				<article class="mdTall:px-4 mdTall:py-0 py-2 mdTall:border-r mdTall:border-b-0 border-b border-[#E9EDDE]/10">
 					<span class="text-xl text-burgundy-800">Contacts</span>
@@ -103,8 +103,8 @@
 						</p>
 					</ul>
 				</article>
-				<div class="flex flex-grow"/>
-				<a href="#top" class="self-center border border-transparent hover:border-[#E9EDDE]/25 h-fit p-2 rounded-lg hover:scale-[1.025] transition-all ease-in group mr-2">
+				<div class="mdTall:flex-grow mdTall:flex hidden"/>
+				<a href="#top" class="self-center mdTall:block hidden border border-transparent hover:border-[#E9EDDE]/25 h-fit p-2 rounded-lg hover:scale-[1.025] transition-all ease-in group mr-2">
 					<svg xmlns="http://www.w3.org/2000/svg" height="2rem" viewBox="0 0 384 512" fill="currentColor" class="group-hover:text-burgundy-900 transition-colors ease-in aspect-square">
 						<!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
 						<path d="M214.6 41.4c-12.5-12.5-32.8-12.5-45.3 0l-160 160c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 141.2V448c0 17.7 14.3 32 32 32s32-14.3 32-32V141.2L329.4 246.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3l-160-160z"/>
