Smol daily update

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -28,7 +28,7 @@
 	<body>
 		<header class="flex rounded-b-md bg-[#0C080A]">
 			<div class="w-1/3 flex mdTall:pl-8 pl-4 py-2">
-				<Image src={prescottLogo} alt="Prescott Logo" class="mdTall:h-28 h-16" />
+				<Image src={prescottLogo} alt="Prescott Logo" class="mdTall:h-28 h-16 w-fit" />
 				<div class="my-3 border border-[#E9EDDE]/25 mx-2" />
 				<TitleText text={bigText} client:load />
 			</div>
