--- a/src/components/astro/NavLink.astro
+++ b/src/components/astro/NavLink.astro
@@ -10,19 +10,19 @@
     const {icon, viewBox, text, URL, isBlank = false}:Props = Astro.props;
 ---
 {!isBlank ? 
-    <a href={URL} class="border border-transparent hover:border-[#E9EDDE]/25 group px-2 py-1 rounded-lg space-x-1 hover:scale-[1.025] transition-all ease-in flex items-center">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox={`0 0 ${viewBox}`} class="group-hover:text-burgundy-900 transition-colors ease-in mdTall:h-5 h-8">
+    <a href={URL} class="border border-transparent hover:border-[#E9EDDE]/25 group px-2 py-1 rounded-lg space-x-1 hover:scale-[1.025] transition-all ease-in flex mdTall:flex-row flex-col items-center justify-center">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox={`0 0 ${viewBox}`} class={`group-hover:text-burgundy-900 transition-colors ease-in mdTall:h-5 h-6 ${Astro.url.pathname === URL ? "text-burgundy-900" : ""}`}>
             <!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
             <path d={icon}/>
         </svg>
-        <span class="text-2xl mdTall:block hidden font-semibold">{text}</span>
+        <span class="mdTall:text-2xl text-lg font-semibold">{text}</span>
     </a>
 :
-    <a href={URL} target="_blank" rel="noopener noreferrer" class="border border-[#E9EDDE]/25 group px-2 py-1 rounded-lg shadow hover:shadow-md space-x-1 hover:shadow-[#E9EDDE]/30 shadow-[#E9EDDE]/25 hover:scale-[1.025] transition-all ease-in flex items-center">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox={`0 0 ${viewBox}`} class="group-hover:text-burgundy-900 transition-colors ease-in mdTall:h-5 h-8">
+    <a href={URL} target="_blank" rel="noopener noreferrer" class="border border-[#E9EDDE]/25 group px-2 py-1 rounded-lg shadow hover:shadow-md space-x-1 hover:shadow-[#E9EDDE]/30 shadow-[#E9EDDE]/25 hover:scale-[1.025] transition-all ease-in flex mdTall:flex-row flex-col items-center mdTall:justify-center">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox={`0 0 ${viewBox}`} class={`group-hover:text-burgundy-900 transition-colors ease-in mdTall:h-5 h-6 ${Astro.url.pathname === URL ? "text-burgundy-900" : ""}`}>
             <!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
             <path d={icon}/>
         </svg>
-        <span class="text-2xl mdTall:block hidden font-semibold">{text}</span>
+        <span class="mdTall:text-2xl text-lg font-semibold">{text}</span>
     </a>
 }
