--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -103,6 +103,7 @@
 							<span class="text-burgundy-800 mr-0.5">@</span>
 							<span>PrescottSchoolLibraries</span>
 						</p>
+						<li>{Astro.url.pathname}</li>
 					</ul>
 				</article>
 				<div class="mdTall:flex-grow mdTall:flex hidden"/>
