--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,51 @@
 ---
 	import Layout from '@layouts/Layout.astro';
+	// import PrescottHighSchool from '@assets/Prescott-High-School.jpg';
+	// import PrescottMidSchool from '@assets/Prescott-Middle-School.jpg';
+	// import { Image } from 'astro:assets';
 ---
 
 <Layout title="Library" bigText="Library">
+	<main class="flex flex-col">
+		<section id="one" class="h-fullscreen w-full flex flex-col justify-end pb-12 items-center">
+			<h1 class="3xl:text-8xl 3xl:font-black 3xl:tracking-widest">Welcome!</h1>
+			<p class="3xl:text-3xl 3xl:font-semibold">To the Prescott Online Library</p>
+			<!-- <a href="#two" class="border border-transparent hover:border-[#E9EDDE]/25 group px-2 py-1 rounded-lg space-x-1 hover:scale-[1.025] transition-all ease-in mt-12">
+				<svg xmlns="http://www.w3.org/2000/svg" height="3rem" fill="currentColor" viewBox="0 0 384 512" class="aspect-square group-hover:text-burgundy-900 transition-colors ease-in">
+					Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc.
+					<path d="M169.4 470.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 370.8 224 64c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 306.7L54.6 265.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z"/>
+				</svg>
+			</a> -->
+		</section>
+		<!-- <section id="two" class="h-screen w-full flex flex-col items-center">
+			<h2 class="3xl:text-8xl 3xl:font-extrabold 3xl:tracking-wider">Pick your school!</h2>
+			<div class="flex justify-evenly w-full border h-full items-center">
+				<article class="w-1/3 aspect-square overflow-hidden border h-fit">
+					<Image src={PrescottHighSchool} alt="Prescott High School" />
+					<div>
+						<span>Prescott High School</span>
+						<p>Grades: 9 - 12</p>
+					</div>
+				</article>
+				<article class="w-1/3 aspect-square overflow-hidden border h-fit">
+					<Image src={PrescottMidSchool} alt="Prescott Middle School" />
+					<div>
+						<span>Prescott Middle School</span>
+						<p>Grades: 6 - 8</p>
+					</div>
+				</article>
+			</div>
+		</section> -->
+	</main>
 </Layout>
+
+<style is:inline>
+	#one{
+		background-color: #0c080a;
+		background-image: linear-gradient(to top, transparent 40%, #0C080A 90%), url("data:image/svg+xml,%3Csvg width='42' height='44' viewBox='0 0 42 44' xmlns='http://www.w3.org/2000/svg'%3E%3Cg id='Page-1' fill='none' fill-rule='evenodd'%3E%3Cg id='brick-wall' fill='%23a80c25' fill-opacity='0.35'%3E%3Cpath d='M0 0h42v44H0V0zm1 1h40v20H1V1zM0 23h20v20H0V23zm22 0h20v20H22V23z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+	}
+	#two{
+		background-color: #0c080a;
+		background-image: linear-gradient(to bottom, transparent 40%, #0C080A 90%), url("data:image/svg+xml,%3Csvg width='42' height='44' viewBox='0 0 42 44' xmlns='http://www.w3.org/2000/svg'%3E%3Cg id='Page-1' fill='none' fill-rule='evenodd'%3E%3Cg id='brick-wall' fill='%23a80c25' fill-opacity='0.35'%3E%3Cpath d='M0 0h42v44H0V0zm1 1h40v20H1V1zM0 23h20v20H0V23zm22 0h20v20H22V23z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+	}
+</style>
