--- a/src/pages/clubs/index.astro
+++ b/src/pages/clubs/index.astro
@@ -1,8 +1,7 @@
 ---
     //#region 
-        import NHD from "@assets/nhd.png";
+        import NHD from "@assets/nhd.svg";
         import Books from "@assets/books.jpg";
-
         import NounBooks from '@assets/noun-books-708302.svg';
         import NounDragon from '@assets/noun-dragon-4657103.svg';
         import NounPenPaper from '@assets/noun-pen-paper-2903999.svg';
