--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,8 +8,8 @@
 <Layout title="Library" bigText="Library">
 	<main class="flex flex-col">
 		<section id="one" class="h-fullscreen w-full flex flex-col justify-end pb-12 items-center">
-			<h1 class="3xl:text-8xl 3xl:font-black 3xl:tracking-widest">Welcome!</h1>
-			<p class="3xl:text-3xl 3xl:font-semibold">To the Prescott Online Library</p>
+			<h1 class="xl:text-8xl xl:font-black xl:tracking-widest">Welcome!</h1>
+			<p class="xl:text-3xl xl:font-semibold">To the Prescott Online Library</p>
 			<!-- <a href="#two" class="border border-transparent hover:border-[#E9EDDE]/25 group px-2 py-1 rounded-lg space-x-1 hover:scale-[1.025] transition-all ease-in mt-12">
 				<svg xmlns="http://www.w3.org/2000/svg" height="3rem" fill="currentColor" viewBox="0 0 384 512" class="aspect-square group-hover:text-burgundy-900 transition-colors ease-in">
 					Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc.
