Changed Dnd logo from dragon to d20 die

--- a/src/pages/clubs/index.astro
+++ b/src/pages/clubs/index.astro
@@ -3,7 +3,7 @@
         import NHD from "@assets/nhd.svg";
         import Books from "@assets/books.jpg";
         import NounBooks from '@assets/noun-books-708302.svg';
-        import NounDragon from '@assets/noun-dragon-4657103.svg';
+        import NounD20 from '@assets/noun-d20-2453700.svg';
         import NounPenPaper from '@assets/noun-pen-paper-2903999.svg';
         import NounSpeech from '@assets/noun-speech-5816268.svg';
     //#endregion
@@ -16,7 +16,7 @@
 <Layout title="Clubs" bigText="Clubs">
     <main>
         <section class="grid px-12 w-full 3xl:grid-cols-5 xl:grid-cols-3 md:grid-cols-2 grid-cols-1 gap-y-16 xl:gap-y-12 justify-items-center grid-flow-row min-h-fullscreen py-1">
-            <ClubCard URL="/clubs/dnd" clubImg={NounDragon} clubName="Dnd", nextMeet="10/16/23" description="Played Dungeons & Dragons before? New to the game? Come and form an adventuring party who will explore fantasy worlds together as they embark on epic quests." />
+            <ClubCard URL="/clubs/dnd" clubImg={NounD20} clubName="Dnd", nextMeet="10/16/23" description="Played Dungeons & Dragons before? New to the game? Come and form an adventuring party who will explore fantasy worlds together as they embark on epic quests." />
             <ClubCard URL="/clubs/nhd" clubImg={NHD} clubName="NHD", nextMeet="10/16/23" description="National History Day is a national research-based history competition. There are several categories in which students can compete, including a museum-type exhibit, a web page, a documentary, a research paper, and a historical performance. Students pick a topic that pertains to the annual theme, conduct extensive research on their topic, and present their findings in one of the project formats. Students may participate individually or a as part of a group of up to five members." />
             <ClubCard URL="/clubs/book-club" clubImg={NounBooks} clubName="Book Club", nextMeet="11/06/23" description="Each month the club reads a new selection and then meets to discuss the book. Books are chosen from student and staff suggestions. We read popular titles and new releases. Most of the books chosen are Young Adult fiction; occasionally we read adult titles and non-fiction. Book club members also participate in special events like author visits, lunch meetings and movie screenings." />
             <ClubCard URL="/clubs/guys-read" clubImg={NounBooks} clubName="Guys Read", nextMeet="11/13/23" description="NHD is an academic competition for elementary and secondary school students. It focuses on historical research, interpretation, and creative expression. Students produce projects such as exhibits, documentaries, papers, performances, or websites related to a specific historical theme, which they present at local, state, and national competitions." />
