--- a/src/pages/clubs/dnd.astro
+++ b/src/pages/clubs/dnd.astro
@@ -1,6 +1,6 @@
 ---
     import Layout from "@layouts/Layout.astro";
-    const URL[] = Astro.url.pathname.split("/");
+    const URL = Astro.url.pathname.split("/");
 ---
 
 <Layout title="Clubs | DnD" bigText="Dnd">
