--- a/src/pages/clubs/dnd.astro
+++ b/src/pages/clubs/dnd.astro
@@ -4,7 +4,5 @@
 ---
 
 <Layout title="Clubs | DnD" bigText="Dnd">
-    {URL.map((text) => (
-        <p>{text}</p>
-    ))}
+    <p>{URL[0]}</p>
 </Layout>
