--- a/src/pages/clubs/dnd.astro
+++ b/src/pages/clubs/dnd.astro
@@ -1,6 +1,6 @@
 ---
     import Layout from "@layouts/Layout.astro";
-    const URL[]: string = [];
+    const URL: string[] = [];
 
     Astro.url.pathname.split("/").map((text) => {
         URL.push(text);
