--- a/src/pages/clubs/dnd.astro
+++ b/src/pages/clubs/dnd.astro
@@ -1,8 +1,9 @@
 ---
     import Layout from "@layouts/Layout.astro";
-    const URL:string = Astro.url.pathname.split("/").join(" ").split(" ");
+    const URL:string = Astro.url.pathname.split("/").join(" ");
+    const URL_two:string = URL.split(" ");
 ---
 
 <Layout title="Clubs | DnD" bigText="Dnd">
-    {URL[0]}
+    {URL_two[0]}
 </Layout>
