--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -72,6 +72,7 @@
 						<FooterLink URL="typescriptlang.org" text="Typescript" />
 						<FooterLink URL="tailwindcss.com" text="TailwindCSS" />
 						<FooterLink URL="fontawesome.com" text="Font Awesome" />
+						<FooterLink URL="thenounproject.com" text="The Noun Project" />
 					</ul>
 				</article>
 				<article class="mdTall:px-4 mdTall:py-0 py-2">
