--- a/src/layouts/ClubLayout.astro
+++ b/src/layouts/ClubLayout.astro
@@ -1,1 +1,106 @@
+---
+	interface Props {
+		title: string,
+		bigText: string,
+    clubLogo: ImageMetaData,
+    // calendar
+    logoCredit: string,
+    logoURL: string
+	}
 
+	const { title, bigText, clubLogo, logoCredit, logoURL } = Astro.props;
+
+	import { Image } from 'astro:assets';
+	import prescottLogo from '@assets/Prescott_Logo.svg';
+	import TitleText from '@components/react/TitleText';
+	import NavLink from '@astroBlocks/NavLink.astro';
+	import FooterLink from '@astroBlocks/FooterLink.astro';
+	import FooterContact from '@astroBlocks/FooterContact.astro';
+	import NavMenu from '@components/react/NavMenu';
+	import SocialTag from '@components/astro/SocialTag.astro';
+---
+
+<!doctype html>
+<html lang="en" class="bg-[#0C080A] text-[#E9EDDE] scroll-smooth">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="description" content="Astro description" />
+		<meta name="viewport" content="width=device-width" />
+		<link rel="icon" type="image/svg+xml" href="/Prescott_Logo.svg" />
+		<meta name="generator" content={Astro.generator} />
+		<title>{title}</title>
+	</head>
+	<body>
+		<header class="flex rounded-b-md bg-[#0C080A]">
+			<div class="w-full flex mdTall:pl-8 pl-4 py-2 overflow-x-hidden">
+				<Image src={prescottLogo} alt="Prescott Logo" class="mdTall:h-28 h-16 w-fit" />
+				<div class="my-3 border border-[#E9EDDE]/25 mx-2" />
+				<TitleText text={bigText} client:load />
+			</div>
+			<nav class="w-fit flex justify-end space-x-8 items-center">
+				<div class="mdTall:relative fixed bottom-0 flex mdTall:justify-end justify-around w-full z-40 rounded-lg backdrop-blur mdTall:backdrop-blur-none mdTall:py-0 py-4 mdTall:space-x-8 items-center">
+					<NavLink text="Home" URL="/" viewBox="576 512" icon="M575.8 255.5c0 18-15 32.1-32 32.1h-32l.7 160.2c0 2.7-.2 5.4-.5 8.1V472c0 22.1-17.9 40-40 40H456c-1.1 0-2.2 0-3.3-.1c-1.4 .1-2.8 .1-4.2 .1H416 392c-22.1 0-40-17.9-40-40V448 384c0-17.7-14.3-32-32-32H256c-17.7 0-32 14.3-32 32v64 24c0 22.1-17.9 40-40 40H160 128.1c-1.5 0-3-.1-4.5-.2c-1.2 .1-2.4 .2-3.6 .2H104c-22.1 0-40-17.9-40-40V360c0-.9 0-1.9 .1-2.8V287.6H32c-18 0-32-14-32-32.1c0-9 3-17 10-24L266.4 8c7-7 15-8 22-8s15 2 21 7L564.8 231.5c8 7 12 15 11 24z" />
+					<NavLink isClubs={true} text="Clubs" URL="/clubs/" viewBox="512 512" icon="M192 104.8c0-9.2-5.8-17.3-13.2-22.8C167.2 73.3 160 61.3 160 48c0-26.5 28.7-48 64-48s64 21.5 64 48c0 13.3-7.2 25.3-18.8 34c-7.4 5.5-13.2 13.6-13.2 22.8v0c0 12.8 10.4 23.2 23.2 23.2H336c26.5 0 48 21.5 48 48v56.8c0 12.8 10.4 23.2 23.2 23.2v0c9.2 0 17.3-5.8 22.8-13.2c8.7-11.6 20.7-18.8 34-18.8c26.5 0 48 28.7 48 64s-21.5 64-48 64c-13.3 0-25.3-7.2-34-18.8c-5.5-7.4-13.6-13.2-22.8-13.2v0c-12.8 0-23.2 10.4-23.2 23.2V464c0 26.5-21.5 48-48 48H279.2c-12.8 0-23.2-10.4-23.2-23.2v0c0-9.2 5.8-17.3 13.2-22.8c11.6-8.7 18.8-20.7 18.8-34c0-26.5-28.7-48-64-48s-64 21.5-64 48c0 13.3 7.2 25.3 18.8 34c7.4 5.5 13.2 13.6 13.2 22.8v0c0 12.8-10.4 23.2-23.2 23.2H48c-26.5 0-48-21.5-48-48V343.2C0 330.4 10.4 320 23.2 320v0c9.2 0 17.3 5.8 22.8 13.2C54.7 344.8 66.7 352 80 352c26.5 0 48-28.7 48-64s-21.5-64-48-64c-13.3 0-25.3 7.2-34 18.8C40.5 250.2 32.4 256 23.2 256v0C10.4 256 0 245.6 0 232.8V176c0-26.5 21.5-48 48-48H168.8c12.8 0 23.2-10.4 23.2-23.2v0z" />
+					<NavLink text="Daily" URL="/daily/" viewBox="448 512" icon="M159.3 5.4c7.8-7.3 19.9-7.2 27.7 .1c27.6 25.9 53.5 53.8 77.7 84c11-14.4 23.5-30.1 37-42.9c7.9-7.4 20.1-7.4 28 .1c34.6 33 63.9 76.6 84.5 118c20.3 40.8 33.8 82.5 33.8 111.9C448 404.2 348.2 512 224 512C98.4 512 0 404.1 0 276.5c0-38.4 17.8-85.3 45.4-131.7C73.3 97.7 112.7 48.6 159.3 5.4zM225.7 416c25.3 0 47.7-7 68.8-21c42.1-29.4 53.4-88.2 28.1-134.4c-4.5-9-16-9.6-22.5-2l-25.2 29.3c-6.6 7.6-18.5 7.4-24.7-.5c-16.5-21-46-58.5-62.8-79.8c-6.3-8-18.3-8.1-24.7-.1c-33.8 42.5-50.8 69.3-50.8 99.4C112 375.4 162.6 416 225.7 416z" />
+				</div>
+				<div class="mdTall:pr-8 pr-4">
+					<NavMenu client:idle />
+				</div>
+			</nav>
+		</header>
+		<div class="min-h-fullscreen">
+      <!--make react component for bread-crumbs thingy-->
+			<slot name="leaders" />
+      <slot name="main" />
+		</div>
+		<footer id="bottom" class="pt-2 px-6 mdTall:pb-0 pb-20">
+			<div class="border-t-2 border-[#E9EDDE]/25 flex mdTall:flex-row flex-col px-2 py-2">
+				<article class="mdTall:px-4 mdTall:py-0 py-2 mdTall:border-r mdTall:border-b-0 border-b border-[#E9EDDE]/10">
+					<span class="text-xl text-burgundy-800">Contacts</span>
+					<ul class="pl-2">
+						<FooterContact name='Jacob "TechFishe" Barker' email="barkej226148@prescott.k12.wi.us" />
+						<FooterContact name="Mrs. Simon" email="jsimon@prescott.k12.wi.us" />
+					</ul>
+				</article>
+				<article class="mdTall:px-4 mdTall:py-0 py-2 mdTall:border-r mdTall:border-b-0 border-b border-[#E9EDDE]/10">
+					<span class="text-xl text-burgundy-800">Other Sites</span>
+					<ul class="pl-2">
+						<FooterLink URL="techfishe.vercel.app" text="Portfolio Site" />
+						<FooterLink URL="15t.vercel.app" text="Music Project" />
+						<FooterLink URL="bubble-neon.vercel.app" text="Chat Project" />
+					</ul>
+				</article>
+				<article class="mdTall:px-4 mdTall:py-0 py-2 mdTall:border-r mdTall:border-b-0 border-b border-[#E9EDDE]/10">
+					<span class="text-xl text-burgundy-800">Tech Used</span>
+					<ul class="pl-2">
+						<FooterLink URL="astro.build" text="AstroJS" />
+						<FooterLink URL="react.dev" text="ReactJS" />
+						<FooterLink URL="typescriptlang.org" text="Typescript" />
+						<FooterLink URL="tailwindcss.com" text="TailwindCSS" />
+						<FooterLink URL="fontawesome.com" text="Font Awesome" />
+						<FooterLink URL="thenounproject.com" text="The Noun Project" />
+					</ul>
+				</article>
+				<article class="mdTall:px-4 mdTall:py-0 py-2">
+					<span class="text-xl text-burgundy-800">Library Socials</span>
+					<ul class="pl-2">
+						<SocialTag viewBox="512 512" tag="libphs" icon="M504 256C504 119 393 8 256 8S8 119 8 256c0 123.78 90.69 226.38 209.25 245V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.28c-30.8 0-40.41 19.12-40.41 38.73V256h68.78l-11 71.69h-57.78V501C413.31 482.38 504 379.78 504 256z" />
+						<SocialTag viewBox="512 512" tag="LibPhs" icon="M389.2 48h70.6L305.6 224.2 487 464H345L233.7 318.6 106.5 464H35.8L200.7 275.5 26.8 48H172.4L272.9 180.9 389.2 48zM364.4 421.8h39.1L151.1 88h-42L364.4 421.8z" />
+						<SocialTag viewBox="448 512" tag="PrescottSchoolLibraries" icon="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z" />
+					</ul>
+				</article>
+        <article>
+          <span class="text-xl text-burgundy-800">Logo Rights</span>
+          <p>{logoCredit} from <a href={logoURL} target="_blank" title="D20 Icons">Noun Project</a> (CC BY 3.0)</p>
+        </article>
+				<div class="mdTall:flex-grow mdTall:flex hidden"/>
+				<a href="#top" class="self-center mdTall:block hidden border border-transparent hover:border-[#E9EDDE]/25 h-fit p-2 rounded-lg hover:scale-[1.025] transition-all ease-in group mr-2">
+					<svg xmlns="http://www.w3.org/2000/svg" height="2rem" viewBox="0 0 384 512" fill="currentColor" class="group-hover:text-burgundy-900 transition-colors ease-in aspect-square">
+						<!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
+						<path d="M214.6 41.4c-12.5-12.5-32.8-12.5-45.3 0l-160 160c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 141.2V448c0 17.7 14.3 32 32 32s32-14.3 32-32V141.2L329.4 246.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3l-160-160z"/>
+					</svg>
+				</a>
+			</div>
+		</footer>
+	</body>
+</html>
