--- a/src/pages/user/index.astro
+++ b/src/pages/user/index.astro
@@ -13,7 +13,7 @@
     async function getUser(){
         await supabase.auth.getUser().then((val) => {
             if(!val.data?.user) return;
-            else window.location.href = "http://localhost:4321/user/dashboard" //THIS MUST BE CHANGED BEFORE GITHUB UPDATE
+            else window.location.href = "http://prescott-library.vercel.app/user/dashboard" //THIS MUST BE CHANGED BEFORE GITHUB UPDATE
         });
     }
 
