--- a/src/pages/clubs/dnd.astro
+++ b/src/pages/clubs/dnd.astro
@@ -3,4 +3,7 @@
 ---
 
 <Layout title="Clubs | DnD" bigText="Dnd">
+    {Astro.url.pathname.split("/").map((item, key) => (
+        <span>{item}<br /><span>
+    ))}
 </Layout>
