--- a/src/pages/clubs/dnd.astro
+++ b/src/pages/clubs/dnd.astro
@@ -1,6 +1,7 @@
 ---
-    import Layout from "@layouts/Layout.astro";
+    import ClubLayout from "@layouts/ClubLayout.astro";
+    import D20 from "@assets/noun-d20-2453700.svg"
 ---
 
-<Layout title="Clubs | DnD" bigText="Dnd">
-</Layout>
+<ClubLayout title="Clubs | DnD" bigText="Dnd" clubLogo={D20} logoCredit="Lonnie Tapscott" logoURL="https://thenounproject.com/icon/d20-2453700/">
+</ClubLayout>
