--- a/src/layouts/ClubLayout.astro
+++ b/src/layouts/ClubLayout.astro
@@ -2,10 +2,10 @@
 	interface Props {
 		title: string,
 		bigText: string,
-    clubLogo: ImageMetaData,
-    // calendar
-    logoCredit: string,
-    logoURL: string
+    	clubLogo: ImageMetadata,
+    	// calendar
+    	logoCredit: string,
+    	logoURL: string
 	}
 
 	const { title, bigText, clubLogo, logoCredit, logoURL } = Astro.props;
@@ -49,9 +49,9 @@
 			</nav>
 		</header>
 		<div class="min-h-fullscreen">
-      <!--make react component for bread-crumbs thingy-->
+      		<!--make react component for bread-crumbs thingy-->
 			<slot name="leaders" />
-      <slot name="main" />
+      		<slot name="main" />
 		</div>
 		<footer id="bottom" class="pt-2 px-6 mdTall:pb-0 pb-20">
 			<div class="border-t-2 border-[#E9EDDE]/25 flex mdTall:flex-row flex-col px-2 py-2">
@@ -89,10 +89,10 @@
 						<SocialTag viewBox="448 512" tag="PrescottSchoolLibraries" icon="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z" />
 					</ul>
 				</article>
-        <article>
-          <span class="text-xl text-burgundy-800">Logo Rights</span>
-          <p>{logoCredit} from <a href={logoURL} target="_blank" title="D20 Icons">Noun Project</a> (CC BY 3.0)</p>
-        </article>
+        		<article>
+        		  <span class="text-xl text-burgundy-800">Logo Rights</span>
+        		  <p>Created by {logoCredit} from <a href={logoURL} target="_blank" class="hover:underline decoration-burgundy-800 tracking-tighter underline-offset-2">Noun Project</a> (CC BY 3.0)</p>
+        		</article>
 				<div class="mdTall:flex-grow mdTall:flex hidden"/>
 				<a href="#top" class="self-center mdTall:block hidden border border-transparent hover:border-[#E9EDDE]/25 h-fit p-2 rounded-lg hover:scale-[1.025] transition-all ease-in group mr-2">
 					<svg xmlns="http://www.w3.org/2000/svg" height="2rem" viewBox="0 0 384 512" fill="currentColor" class="group-hover:text-burgundy-900 transition-colors ease-in aspect-square">
