Got started on basic clubs page & writers block!

--- a/src/pages/clubs/index.astro
+++ b/src/pages/clubs/index.astro
@@ -1,11 +1,11 @@
 ---
     //#region 
-        import NHD from "@assets/nhd.svg";
+        import NHD from "@assets/clubIcons/nhd.svg";
         import Books from "@assets/books.jpg";
-        import NounBooks from '@assets/noun-books-708302.svg';
-        import NounD20 from '@assets/noun-d20-2453700.svg';
-        import NounPenPaper from '@assets/noun-pen-paper-2903999.svg';
-        import NounSpeech from '@assets/noun-speech-5816268.svg';
+        import NounBooks from '@assets/clubIcons/noun-books-708302.svg';
+        import NounD20 from '@assets/clubIcons/noun-d20-2453700.svg';
+        import NounPenPaper from '@assets/clubIcons/noun-writing-3239278.svg';
+        import NounSpeech from '@assets/clubIcons/noun-speech-5816268.svg';
     //#endregion
 
     import Layout from '@layouts/Layout.astro';
