--- a/src/layouts/ClubLayout.astro
+++ b/src/layouts/ClubLayout.astro
@@ -5,10 +5,11 @@
     	clubLogo: ImageMetadata,
     	// calendar
     	logoCredit: string,
-    	logoURL: string
+    	logoURL: string,
+		clubName: string
 	}
 
-	const { title, bigText, clubLogo, logoCredit, logoURL } = Astro.props;
+	const { title, bigText, clubLogo, logoCredit, logoURL, clubName } = Astro.props;
 
 	import { Image } from 'astro:assets';
 	import prescottLogo from '@assets/Prescott_Logo.svg';
@@ -18,6 +19,7 @@
 	import FooterContact from '@astroBlocks/FooterContact.astro';
 	import NavMenu from '@components/react/NavMenu';
 	import SocialTag from '@components/astro/SocialTag.astro';
+	import NavProfile from '@components/react/NavProfile';
 ---
 
 <!doctype html>
@@ -41,7 +43,7 @@
 				<div class="mdTall:relative fixed bottom-0 flex mdTall:justify-end justify-around w-full z-40 rounded-lg backdrop-blur mdTall:backdrop-blur-none mdTall:py-0 py-4 mdTall:space-x-8 items-center">
 					<NavLink text="Home" URL="/" viewBox="576 512" icon="M575.8 255.5c0 18-15 32.1-32 32.1h-32l.7 160.2c0 2.7-.2 5.4-.5 8.1V472c0 22.1-17.9 40-40 40H456c-1.1 0-2.2 0-3.3-.1c-1.4 .1-2.8 .1-4.2 .1H416 392c-22.1 0-40-17.9-40-40V448 384c0-17.7-14.3-32-32-32H256c-17.7 0-32 14.3-32 32v64 24c0 22.1-17.9 40-40 40H160 128.1c-1.5 0-3-.1-4.5-.2c-1.2 .1-2.4 .2-3.6 .2H104c-22.1 0-40-17.9-40-40V360c0-.9 0-1.9 .1-2.8V287.6H32c-18 0-32-14-32-32.1c0-9 3-17 10-24L266.4 8c7-7 15-8 22-8s15 2 21 7L564.8 231.5c8 7 12 15 11 24z" />
 					<NavLink isClubs={true} text="Clubs" URL="/clubs/" viewBox="512 512" icon="M192 104.8c0-9.2-5.8-17.3-13.2-22.8C167.2 73.3 160 61.3 160 48c0-26.5 28.7-48 64-48s64 21.5 64 48c0 13.3-7.2 25.3-18.8 34c-7.4 5.5-13.2 13.6-13.2 22.8v0c0 12.8 10.4 23.2 23.2 23.2H336c26.5 0 48 21.5 48 48v56.8c0 12.8 10.4 23.2 23.2 23.2v0c9.2 0 17.3-5.8 22.8-13.2c8.7-11.6 20.7-18.8 34-18.8c26.5 0 48 28.7 48 64s-21.5 64-48 64c-13.3 0-25.3-7.2-34-18.8c-5.5-7.4-13.6-13.2-22.8-13.2v0c-12.8 0-23.2 10.4-23.2 23.2V464c0 26.5-21.5 48-48 48H279.2c-12.8 0-23.2-10.4-23.2-23.2v0c0-9.2 5.8-17.3 13.2-22.8c11.6-8.7 18.8-20.7 18.8-34c0-26.5-28.7-48-64-48s-64 21.5-64 48c0 13.3 7.2 25.3 18.8 34c7.4 5.5 13.2 13.6 13.2 22.8v0c0 12.8-10.4 23.2-23.2 23.2H48c-26.5 0-48-21.5-48-48V343.2C0 330.4 10.4 320 23.2 320v0c9.2 0 17.3 5.8 22.8 13.2C54.7 344.8 66.7 352 80 352c26.5 0 48-28.7 48-64s-21.5-64-48-64c-13.3 0-25.3 7.2-34 18.8C40.5 250.2 32.4 256 23.2 256v0C10.4 256 0 245.6 0 232.8V176c0-26.5 21.5-48 48-48H168.8c12.8 0 23.2-10.4 23.2-23.2v0z" />
-					<NavLink text="Daily" URL="/daily/" viewBox="448 512" icon="M159.3 5.4c7.8-7.3 19.9-7.2 27.7 .1c27.6 25.9 53.5 53.8 77.7 84c11-14.4 23.5-30.1 37-42.9c7.9-7.4 20.1-7.4 28 .1c34.6 33 63.9 76.6 84.5 118c20.3 40.8 33.8 82.5 33.8 111.9C448 404.2 348.2 512 224 512C98.4 512 0 404.1 0 276.5c0-38.4 17.8-85.3 45.4-131.7C73.3 97.7 112.7 48.6 159.3 5.4zM225.7 416c25.3 0 47.7-7 68.8-21c42.1-29.4 53.4-88.2 28.1-134.4c-4.5-9-16-9.6-22.5-2l-25.2 29.3c-6.6 7.6-18.5 7.4-24.7-.5c-16.5-21-46-58.5-62.8-79.8c-6.3-8-18.3-8.1-24.7-.1c-33.8 42.5-50.8 69.3-50.8 99.4C112 375.4 162.6 416 225.7 416z" />
+					<NavProfile client:idle />
 				</div>
 				<div class="mdTall:pr-8 pr-4">
 					<NavMenu client:idle />
@@ -50,7 +52,14 @@
 		</header>
 		<div class="min-h-fullscreen">
       		<!--make react component for bread-crumbs thingy-->
-			<slot name="leaders" />
+			<section class="flex px-12">
+				<Image src={clubLogo} alt="Club logo" class="mdTall:w-1/6 rounded-lg bg-[#E9EDDE] aspect-square" />
+				<div class="flex flex-col px-1 justify-center">
+                    <span class="border-b border-b-[#E9EDDE]/25 pb-1 px-1 text-6xl font-bold tracking-wide">{clubName}</span>
+                    <p class="px-1 pt-1 text-lg">Lead by: (put leaders here)</p>
+                </div>
+				<slot name="actions" />
+			</section>
       		<slot name="main" />
 		</div>
 		<footer id="bottom" class="pt-2 px-6 mdTall:pb-0 pb-20">
@@ -81,7 +90,7 @@
 						<FooterLink URL="thenounproject.com" text="The Noun Project" />
 					</ul>
 				</article>
-				<article class="mdTall:px-4 mdTall:py-0 py-2">
+				<article class="mdTall:px-4 mdTall:py-0 py-2 mdTall:border-r mdTall:border-b-0 border-b border-[#E9EDDE]/10">
 					<span class="text-xl text-burgundy-800">Library Socials</span>
 					<ul class="pl-2">
 						<SocialTag viewBox="512 512" tag="libphs" icon="M504 256C504 119 393 8 256 8S8 119 8 256c0 123.78 90.69 226.38 209.25 245V327.69h-63V256h63v-54.64c0-62.15 37-96.48 93.67-96.48 27.14 0 55.52 4.84 55.52 4.84v61h-31.28c-30.8 0-40.41 19.12-40.41 38.73V256h68.78l-11 71.69h-57.78V501C413.31 482.38 504 379.78 504 256z" />
@@ -89,9 +98,9 @@
 						<SocialTag viewBox="448 512" tag="PrescottSchoolLibraries" icon="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z" />
 					</ul>
 				</article>
-        		<article>
+        		<article class="mdTall:px-4 mdTall:py-0 py-2">
         		  <span class="text-xl text-burgundy-800">Logo Rights</span>
-        		  <p>Created by {logoCredit} from <a href={logoURL} target="_blank" class="hover:underline decoration-burgundy-800 tracking-tighter underline-offset-2">Noun Project</a> (CC BY 3.0)</p>
+        		  <p class="pl-2">{logoCredit} from <a href={logoURL} target="_blank" class="hover:underline decoration-burgundy-800 tracking-tighter underline-offset-2">Noun Project</a> (CC BY 3.0)</p>
         		</article>
 				<div class="mdTall:flex-grow mdTall:flex hidden"/>
 				<a href="#top" class="self-center mdTall:block hidden border border-transparent hover:border-[#E9EDDE]/25 h-fit p-2 rounded-lg hover:scale-[1.025] transition-all ease-in group mr-2">
