--- a/src/pages/clubs/dnd/calendar.astro
+++ b/src/pages/clubs/dnd/calendar.astro
@@ -1,6 +1,6 @@
 ---
     import ClubLayout from "@layouts/ClubLayout.astro";
-    import D20 from "@assets/noun-d20-2453700.svg"
+    import D20 from "@assets/clubIcons/noun-d20-2453700.svg"
 ---
 
 <ClubLayout title="Clubs | DnD" bigText="Dnd" clubName="Dungeons & Dragons" clubLogo={D20} logoCredit="Lonnie Tapscott" logoURL="https://thenounproject.com/icon/d20-2453700/">
